--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -30,10 +30,24 @@
   color: var(--brand);
 }
 
-.logoIcon {
-  width: 32px;
-  height: 32px;
-  border-radius: var(--radius-sm);
+.logoImage {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--border);
+  transition: border-color var(--transition-fast);
+}
+
+.logo:hover .logoImage {
+  border-color: var(--brand);
+}
+
+.profileImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .logoText {
